--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Snake Game</title>
   </head>
   <body>
+    <h1>Snake Game</h1>
     <canvas width="400" height="400" id="canvas"></canvas>
+    <h2>Score: 0</h2>
     <script type="module" src="./src/scripts/main.js" defer></script>
   </body>
 </html>
