feat: reset game

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Snake Game</h1>
     <canvas width="400" height="400" id="canvas"></canvas>
     <h2>Score: 0</h2>
+    <button>Reset</button>
     <script type="module" src="./src/scripts/main.js" defer></script>
   </body>
 </html>
