refactor: ts implementation with classes

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <h1>Snake Game</h1>
     <canvas width="400" height="400" id="canvas"></canvas>
     <h2>Score: 0</h2>
-    <script type="module" src="./src/scripts/js/main.js" defer></script>
+    <script type="module" src="./src/scripts/js/main2.js" defer></script>
   </body>
 </html>
